First commited as before_9389_rev4