@@ -40,7 +40,7 @@ import static net.spy.memcached.protocol.binary.GetOperationImpl.EXTRA_HDR_LEN;
 class MultiGetOperationImpl extends MultiKeyOperationImpl implements
     GetOperation {
 
-  private static final int CMD_GETQ = 0x09;
+  private static final byte CMD_GETQ = 0x09;
 
   private final Map<Integer, String> keys = new HashMap<Integer, String>();
   private final Map<Integer, byte[]> bkeys = new HashMap<Integer, byte[]>();
@@ -49,7 +49,7 @@ class MultiGetOperationImpl extends MultiKeyOperationImpl implements
   private final int terminalOpaque = generateOpaque();
 
   public MultiGetOperationImpl(Collection<String> k, OperationCallback cb) {
-    super(-1, -1, cb);
+    super(DUMMY_OPCODE, -1, cb);
     for (String s : new HashSet<String>(k)) {
       addKey(s);
     }
@@ -65,7 +65,9 @@ class MultiGetOperationImpl extends MultiKeyOperationImpl implements
       keys.put(rv, k);
       bkeys.put(rv, KeyUtil.getKeyBytes(k));
       rkeys.put(k, rv);
-      vbmap.put(k, Short.valueOf((short) 0));
+      synchronized (vbmap) {
+        vbmap.put(k, new Short((short) 0));
+      }
     }
     return rv;
   }
@@ -84,7 +86,7 @@ class MultiGetOperationImpl extends MultiKeyOperationImpl implements
 
       // Custom header
       bb.put(REQ_MAGIC);
-      bb.put((byte) CMD_GETQ);
+      bb.put(CMD_GETQ);
       bb.putShort((short) keyBytes.length);
       bb.put((byte) 0); // extralen
       bb.put((byte) 0); // data type
